# Enigma-game-engine

./: .gitignore  CMakeLists.txt  README.md
src/: Enigma.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  RigidBodyComponent.h  SpriteComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: EventBus.h
src/Events/: CollisionEvent.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AnimationSystem.h  CollisionSystem.h  MovementSystem.h  RenderColliderSystem.h  RenderSystem.h
